src/test/ui/generic-associated-types/issue-67510.stderr
error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/issue-67510.rs:7:21
   |
LL | fn f(x: Box<dyn X<Y<'a>=&'a ()>>) {}
   |     -               ^^ undeclared lifetime
   |     |
   |     help: consider introducing lifetime `'a` here: `<'a>`

error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/issue-67510.rs:7:26
   |
LL | fn f(x: Box<dyn X<Y<'a>=&'a ()>>) {}
   |     -                    ^^ undeclared lifetime
   |     |
   |     help: consider introducing lifetime `'a` here: `<'a>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0261`.
